视频：m3u8下载播放优化3

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -108,6 +108,7 @@
             android:name=".activity.VideoActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|uiMode"
             android:exported="true"
+            android:hardwareAccelerated="true"
             android:screenOrientation="portrait"
             tools:ignore="AppLinkUrlError">
             <!-- 设置此activity可用于打开 视频文件 -->
