--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,7 @@
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" /><!--后台获取位置信息，若需后台定位或持续导航则必选-->
     <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" /><!--用于申请调用A-GPS模块,卫星定位加速-->
     <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" tools:ignore="MockLocation" /><!--模拟定位-->
+    <uses-feature android:name="android.hardware.sensor.compass"/> <!-- 指南针传感器 -->
 
     <!--后台悬浮窗口-->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_LOCATION" />
@@ -242,6 +243,7 @@
             android:exported="true"
             android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE" />
 
+        <!--高德定位需要声名的一个service-->
         <service android:name="com.amap.api.location.APSService"/>
 
         <service
