--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,17 +113,16 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    // FloatingActionButton 一个按钮ui框架
-    implementation 'com.github.clans:fab:1.6.4'
-
+    // testImplementation 'junit:junit:4.13.2'
+    // androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    // androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'org.apache.commons:commons-lang3:3.7'
-    implementation files('libs\\bcprov-jdk16-139.jar')
-
     implementation 'com.google.code.gson:gson:2.8.6'
 
+    implementation files('libs\\bcprov-jdk16-139.jar')
+
+    // FloatingActionButton 一个按钮ui框架
+    implementation 'com.github.clans:fab:1.6.4'
     // 沉浸式状态栏(状态栏工具)
     // 需在项目根目录下的gradle.properties文件中加入这两行
     // android.useAndroidX=true //是否使用androidx
